Code formatting improvements