@@ -3,6 +3,7 @@ package atmosfears.AtmosFearsBE.controller;
 import atmosfears.AtmosFearsBE.database.Particulate;
 import atmosfears.AtmosFearsBE.model.AirParticulates;
 import atmosfears.AtmosFearsBE.service.AirParticulatesService;
+
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.*;
@@ -30,44 +31,63 @@ public class DataEndpointController {
             @RequestParam(name = "start") String startDateStr,
             @RequestParam(name = "end") String endDateStr) {
         Date startDate, endDate;
+
         try {
             startDate = convertDate(startDateStr, "yyyy-MM-dd");
             endDate = convertDate(endDateStr, "yyyy-MM-dd");
         } catch (ParseException e) {
             e.printStackTrace();
-            List<Object> err = new ArrayList<>(Arrays.asList("Error while parsing date"));
+            List<Object> err = new ArrayList<>(List.of(
+                    "Error while parsing date"));
             return ResponseEntity.internalServerError().body(err);
         }
-        return ResponseEntity.ok(airParticulatesService.getAverageParticulatesValues(startDate, endDate).toList());
+
+        return ResponseEntity.ok(airParticulatesService.getAverageParticulatesValues(
+                startDate,
+                endDate
+        ).toList());
     }
 
-    private Date convertDate(String dateStr, String format) throws ParseException {
+    private Date convertDate(String dateStr, String format)
+            throws ParseException {
         SimpleDateFormat simpleDateFormat = new SimpleDateFormat(format);
         return simpleDateFormat.parse(dateStr);
     }
 
     @GetMapping("/data/windrose")
-    public ResponseEntity<Map<String,Object>> getWindroseData(@RequestParam(required = false) Optional<String> pollutant,
-                                                              @RequestParam(name = "start") @DateTimeFormat(pattern = "yyyy-MM-dd-hh:mm") Date startDate,
-                                                              @RequestParam(name = "end") @DateTimeFormat(pattern = "yyyy-MM-dd-hh:mm") Date endDate){
-        ArrayList<Map<String,Object>> result = new ArrayList<>();
-        List<AirParticulates> airParticulatesList =  airParticulatesService.findByDateBetween(startDate, endDate);
-        for(AirParticulates airParticulates: airParticulatesList){
+    public ResponseEntity<Map<String, Object>> getWindroseData(
+            @RequestParam(required = false) Optional<String> pollutant,
+            @RequestParam(name = "start")
+            @DateTimeFormat(pattern = "yyyy-MM-dd-hh:mm") Date startDate,
+            @RequestParam(name = "end")
+            @DateTimeFormat(pattern = "yyyy-MM-dd-hh:mm") Date endDate) {
+        ArrayList<Map<String, Object>> result = new ArrayList<>();
+        List<AirParticulates> airParticulatesList =
+                airParticulatesService.findByDateBetween(startDate, endDate);
+
+        for (AirParticulates airParticulates : airParticulatesList) {
             HashMap<String, Object> item = new HashMap<>();
             item.put("id", airParticulates.getId());
             item.put("date", airParticulates.getDate());
             item.put("code", airParticulates.getCode());
             item.put("ws", airParticulates.getWindSpeed());
             item.put("wd", airParticulates.getWindDirection());
-            if(pollutant.isPresent()){
-                if(pollutant.get().equals("PM10"))      item.put("PM10", airParticulates.getPM10());
-                else if(pollutant.get().equals("PM25")) item.put("PM25", airParticulates.getPM25());
-                else if(pollutant.get().equals("CO"))   item.put("CO", airParticulates.getCO());
-                else if(pollutant.get().equals("NO2"))  item.put("NO2", airParticulates.getNO2());
-                else if(pollutant.get().equals("SO2"))  item.put("SO2", airParticulates.getSO2());
-                else if(pollutant.get().equals("O3"))   item.put("O3", airParticulates.getO3());
+
+            if (pollutant.isPresent()) {
+                if (pollutant.get().equals("PM10"))
+                    item.put("PM10", airParticulates.getPM10());
+                else if (pollutant.get().equals("PM25"))
+                    item.put("PM25", airParticulates.getPM25());
+                else if (pollutant.get().equals("CO"))
+                    item.put("CO", airParticulates.getCO());
+                else if (pollutant.get().equals("NO2"))
+                    item.put("NO2", airParticulates.getNO2());
+                else if (pollutant.get().equals("SO2"))
+                    item.put("SO2", airParticulates.getSO2());
+                else if (pollutant.get().equals("O3"))
+                    item.put("O3", airParticulates.getO3());
                 else return ResponseEntity.badRequest().build();
-            }else{
+            } else {
                 item.put("PM10", airParticulates.getPM10());
                 item.put("PM25", airParticulates.getPM25());
                 item.put("CO", airParticulates.getCO());
@@ -77,14 +97,16 @@ public class DataEndpointController {
             }
             result.add(item);
         }
-        return ResponseEntity.ok(new HashMap<String, Object>(){{
+
+        return ResponseEntity.ok(new HashMap<String, Object>() {{
             put("responseList", result);
         }});
     }
 
     @CrossOrigin
     @GetMapping("/data/windrose/aggr")
-    public ResponseEntity<List<?>> getWindroseData(@RequestParam String pollutant,
+    public ResponseEntity<List<?>> getWindroseData(
+            @RequestParam String pollutant,
             @RequestParam(name = "start") String startDateStr,
             @RequestParam(name = "end") String endDateStr) {
         Date startDate, endDate;
@@ -96,12 +118,18 @@ public class DataEndpointController {
             return ResponseEntity.internalServerError().build();
         }
 
-        List<Particulate> particulates = Arrays.stream(Particulate.values()).filter(p -> p.toString().equals(pollutant)).toList();
+        List<Particulate> particulates = Arrays.stream(Particulate.values())
+                                               .filter(p -> p.toString()
+                                                             .equals(pollutant))
+                                               .toList();
         if (particulates.size() != 1) {
             return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
 
-        return ResponseEntity.ok(airParticulatesService.getAggregatedWindroseData(startDate, endDate, particulates.get(0)).toList());
+        return ResponseEntity.ok(airParticulatesService.getAggregatedWindroseData(
+                startDate,
+                endDate,
+                particulates.get(0)
+        ).toList());
     }
-
 }
